--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "imports-loader": "^0.6.3",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.1",
+    "lodash": "^3.9.3",
     "lodash.assign": "^3.0.0",
     "lodash.foreach": "^3.0.1",
     "main-bower-files": "^2.5.0",
