--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash.assign": "^3.0.0",
     "lodash.foreach": "^3.0.1",
     "main-bower-files": "^2.5.0",
+    "mousetrap": "^1.5.2",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.0",
     "three": "^0.71.0",
